apps/dev/kagent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kagent
  namespace: dev-kagent
spec:
  ingressClassName: traefik
  rules:
  - host: kagent-dev.landryzetam.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kagent
            port:
              number: 80
